example/PyFrag2025/Methane/methane.err

The following have been reloaded with a version change:
  1) ams/2024.102 => ams/2021.102-zen

Error running PyFrag backend: The optional package 'scm.amspipe' is required for this PLAMS functionality, but is not available. It can be installed using the command: pip install $AMSHOME/scripting/scm/amspipe. Please install and try again.
Traceback (most recent call last):
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/src/pyfrag/cluster_runner.py", line 106, in run_backend
    spec.loader.exec_module(pyfrag_module)
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/src/pyfrag/host/standalone/adf_new/PyFrag.py", line 90, in <module>
    settings_general = settings_from_inputfile(inputKeys["adfinputfile"])
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/src/pyfrag/host/standalone/adf_new/PyFragModules.py", line 29, in settings_from_inputfile
    pre_calc_job: AMSJob = AMSJob.from_inputfile(inputfile)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/interfaces/adfsuite/ams.py", line 3396, in from_inputfile
    return cls.from_input(inp_file, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/interfaces/adfsuite/ams.py", line 3375, in from_input
    sett.input = InputParserFacade().to_settings(cls._command, text_input)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/interfaces/adfsuite/inputparser.py", line 150, in to_settings
    with self.parser as parser:
         ^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/interfaces/adfsuite/inputparser.py", line 141, in parser
    return InputParser()
           ^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/interfaces/adfsuite/inputparser.py", line 33, in __init__
    self.worker = AMSWorker(sett)
                  ^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/core/functions.py", line 491, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/net/sys/pscst001/export/tc/sle337/bin/PyFrag/.venv/lib64/python3.11/site-packages/scm/plams/core/functions.py", line 490, in wrapper
    raise MissingOptionalPackageError(package_name)
scm.plams.core.errors.MissingOptionalPackageError: The optional package 'scm.amspipe' is required for this PLAMS functionality, but is not available. It can be installed using the command: pip install $AMSHOME/scripting/scm/amspipe. Please install and try again.
